# SPDX-FileCopyrightText: 2024-present Arthit Suriyawongkul <suriyawa@tcd.ie>
# SPDX-License-Identifier: CC0-1.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentimentdemo"
dynamic = ["version"]
description = "A simple sentiment analysis application, published solely as an artifact for the purpose of demonstrating and testing a software bill of materials. Not recommended for any text classification tasks."
readme = "README.md"
requires-python = ">=3.9,<3.12"
license = "CC0-1.0"
keywords = [
    "sbom",
    "bom",
    "aibom",
    "spdx",
    "software bill of materials",
    "artificial intelligence",
    "machine learning",
    "natural language processing",
    "sentiment analysis",
    "ai",
    "nlp",
]
authors = [{ name = "Arthit Suriyawongkul", email = "suriyawa@tcd.ie" }]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fasttext-community==0.11.6",
    "newmm-tokenizer==0.2.2",
    "numpy==1.26.4",
    "th-simple-preprocessor==0.10.1",
]

[project.optional-dependencies]
dev = ["mypy>=1.19.1", "pylint==3.3.9", "pytest==8.4.2"]
eval = ["scikit-learn==1.6.1"]

[project.urls]
Documentation = "https://github.com/bact/sentimentdemo#readme"
Issues = "https://github.com/bact/sentimentdemo/issues"
Source = "https://github.com/bact/sentimentdemo"

[tool.coverage.paths]
sentimentdemo = ["src/sentimentdemo", "*/sentimentdemo/src/sentimentdemo"]
tests = ["tests", "*/sentimentdemo/tests"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == '__main__':",
    "if TYPE_CHECKING:",
]

[tool.coverage.run]
source_pkgs = ["sentimentdemo"]
branch = true
parallel = true
omit = ["src/sentimentdemo/__about__.py"]

[tool.hatch.envs.test]
extra-dependencies = [
    "coverage[toml]==7.10.7",
    "pytest==8.4.2",
    "pytest-cov==7.1.0",
]

[[tool.hatch.envs.test.matrix]]
python = ["3.9", "3.10", "3.11"]

[tool.hatch.envs.test.scripts]
# hatch run test:cov
cov = 'pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=tests'

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.19.1"]

[[tool.hatch.envs.types.matrix]]
python = ["3.9", "3.10", "3.11"]

[tool.hatch.envs.types.scripts]
# hatch run types:check
check = "mypy --install-types --non-interactive {args:src/sentimentdemo tests}"

[tool.hatch.version]
path = "src/sentimentdemo/__about__.py"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["fasttext", "newmm_tokenizer.*", "th_preprocessor.*", "sklearn.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
